loading files and processing them

--- a/mos.yml
+++ b/mos.yml
@@ -20,6 +20,10 @@ tags:
 
 manifest_version: 2017-09-29
 
+cdefs:
+  # Duktape is hungry for stack when eval'ing
+  MGOS_TASK_STACK_SIZE_BYTES: 16384
+
 # Temporary, while root manifest change propagates (2018/03/29).
 libs:
   - origin: https://github.com/mongoose-os-libs/core
