--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "mgos_system.h": "c",
     "mos_duk.h": "c",
     "duktape.h": "c",
-    "mos_duk_funcs.h": "c"
+    "mos_duk_funcs.h": "c",
+    "typeindex": "c",
+    "typeinfo": "c"
   }
 }
