--- a/mos.yml
+++ b/mos.yml
@@ -27,3 +27,4 @@ cdefs:
 # Temporary, while root manifest change propagates (2018/03/29).
 libs:
   - origin: https://github.com/mongoose-os-libs/core
+  - origin: https://github.com/mongoose-os-libs/adc
